wajig (2.11~pre) UNRELEASED; urgency=low

  * UPGRADE: Use the new --with-new-pkgs option of 'apt-get upgrade'

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sun, 24 Nov 2013 15:25:15 +0200

wajig (2.10) unstable; urgency=low

  * LIST-COMMANDS: accept an optional argument to filter the output;
    this is equivalent to 'wajig list-commands | grep <pattern>'

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sun, 13 Oct 2013 08:21:30 +0200

wajig (2.9) unstable; urgency=low

  * bump Standards-Version to 3.9.4: no changes needed
  * minimum version for python-apt is now 0.8.9+, due to python3.3 support
  * restore dashes in subcommands in bash completion; suggestion and
    initial patch by Reuben Thomas
  * LIST-LOG: restore wajig log; Karl Schmidt insisted very strongly
  * LIST-COMMANDS: make it one-line per command as it was before;
    Karl insisted strongly on this one too

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sun, 11 Aug 2013 00:10:06 +0200

wajig (2.8) unstable; urgency=low

  * UPDATE: fix performance issue (patch by Robert Luberda); Closes: #705241

  * improve package description:
    - simpler
    - less boastful
    - add a pointer to a guide
    - tis 'wajig', not 'Wajig'

  * SEARCH:
    - make -v|--verbose match short package descriptions in addition to
      package names
    - add -vv, which also searches long package descriptions and displays them;
      the former was available as -v, and the latter is new;
      this functionality was suggested by Reuben Thomas
    - add debtags search; this happens if the string '::' is in the search term

  * SEARCH, INSTALL: fix weird bugs where package '0ad' could not be searched
    for or installed; LP #1182264

  * update TUTORIAL to reflect that allowing any case for commands has
    since been removed; LP #1033536

  * PURGEORPHANS, REMOVEORPHANS:
    - remove --teach option
      + it would need to be too complex in order to be accurate since it